# seedlot

./: .gitignore  package.json
seedlot-contracts/: .gitignore  Anchor.toml  package.json  tsconfig.json
seedlot-contracts/__tests__/: certifying.ts  confirmingLotFulfillment.ts  offers.ts  payingHarvest.ts  placingOrders.ts  preparingLots.ts  seedlot-contracts.ts
seedlot-contracts/client/: utils.ts
seedlot-contracts/programs/seedlot-contracts/: Cargo.toml
seedlot-contracts/programs/seedlot-contracts/src/: certify.rs  confirm.rs  contract.rs  errors.rs  harvest.rs  lib.rs  lots.rs  offers.rs  orders.rs  utils.rs
seedlot-contracts/temp/: certifying.ts  lots.ts  offers.ts
seedlot-contracts/tests/: seedlot-contracts.ts
seedlot-site/: package.json  tailwind.config.ts  tsconfig.json
seedlot-site/migrations/20241006084225_init/: migration.sql
seedlot-site/prisma/: schema.prisma  seed.ts
seedlot-site/prisma/migrations/20241007172804_add_certification/: migration.sql
seedlot-site/prisma/migrations/20241008171126_add_program_contract/: migration.sql
seedlot-site/prisma/migrations/20241009024346_add_trees_farms/: migration.sql
seedlot-site/prisma/migrations/20241009042710_add_mint_address_to_trees_at_farm/: migration.sql
seedlot-site/prisma/migrations/20241009055535_add_mint_index_to_trees/: migration.sql
seedlot-site/src/app/: globals.css  layout.tsx  page.tsx  walletProvider.tsx
seedlot-site/src/app/admin/: page.tsx
seedlot-site/src/components/: Nav.tsx  SideNav.tsx
seedlot-site/src/config/: firebaseConfig.tsx
(+49 files in other folders)
